<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/view_group_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_default"
    android:orientation="vertical">

    <com.tan.mvpdemo.uitl.TitleView
        android:id="@+id/title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/view_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/install_position"
            android:textColor="@color/text_color"
            android:textSize="@dimen/font_size_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/view_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="10dp">

            <com.tan.mvpdemo.widget.ContainsEmojiEditText
                android:id="@+id/et_install_pos"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/edit_bg"
                android:gravity="top"
                android:hint="@string/input_install_position"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:maxLength="100"
                android:padding="5dp"
                android:scrollbars="vertical"
                android:textColor="@color/text_color"
                android:textColorHint="#818182"
                android:textCursorDrawable="@null"
                android:textSize="14dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/view_line" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="10dp"
            android:text="@string/install_postion_pic"
            android:textColor="@color/text_color"
            android:textSize="14dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/view_line" />

        <com.tan.mvpdemo.widget.AutoSizeGridView
            android:id="@+id/grid_view_pic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:horizontalSpacing="1dp"
            android:listSelector="@color/transparent"
            android:numColumns="3"
            android:scrollbars="none"
            android:verticalSpacing="1dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_continue_install"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@drawable/shape_button"
                android:text="@string/continue_install"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <Button
                android:id="@+id/btn_check_signal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_button"
                android:text="@string/signal_check"
                android:textColor="@color/white"
                android:textSize="18dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>