<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bg_dialog"
        android:orientation="vertical">
        <!--android:padding="10dp">-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/distance_20"
            android:layout_marginTop="@dimen/distance_20"
			android:layout_marginLeft="@dimen/distance_20"
            android:layout_marginRight="@dimen/distance_20"
            android:orientation="vertical">

            <TextView
                android:id="@+id/view_dialog_txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/prompt"
                android:textStyle="bold"
                android:textColor="@color/font_black"
                android:textSize="@dimen/font_size_middle"/>

            <TextView
                android:id="@+id/view_dialog_txt_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/distance_20"
                android:textColor="@color/font_content"
                android:textSize="@dimen/font_size_normal"/>

        </LinearLayout>

        <View style="@style/line_horizontal_gray_style" />

        <LinearLayout
            android:id="@+id/view_btn_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:orientation="horizontal">

            <Button
                android:id="@+id/view_dialog_btn_left"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_transparent_black_5"
                android:padding="9dp"
                android:text="@string/cancel"
                android:textColor="@color/font_blue"
                android:textSize="@dimen/font_size_normal"/>

            <View
                android:id="@+id/view_line"
                style="@style/line_vertical_gray_style"/>

            <Button
                android:id="@+id/view_dialog_btn_right"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_transparent_black_5"
                android:padding="9dp"
                android:text="@string/sure"
                android:textColor="@color/font_blue"
                android:textSize="@dimen/font_size_normal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:orientation="horizontal">

            <Button
                android:id="@+id/view_dialog_btn_single_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_transparent_black_5"
                android:padding="@dimen/distance_10"
                android:text="@string/know"
                android:textStyle="bold"
                android:textColor="@color/font_blue"
                android:textSize="@dimen/font_size_normal"
                android:visibility="gone"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>